--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -25,4 +25,5 @@ jobs:
 
       - name: Run migrations
         run: |
-          python manage.py migrate
+          python manage.py makemigrations  
+          python manage.py migrate 
